--- a/static/main.html
+++ b/static/main.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="form_input" method="post">
+    <form action="form" method="post">
         <label for="name">Name: </label><input id="name" type="text" name="name"><br>
         <label for="starter">Starter: </label><input id="starter" type="text" name="starter"><br>
         <input type="submit">
